--- a/src/controls/controls.css
+++ b/src/controls/controls.css
@@ -3,6 +3,13 @@
 		position: absolute;
 		width: 96.56%; height: 40px;
 		bottom: 8px; left: 50%; margin: 0 0 0 -48.28%;
+
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: moz-none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 		.controls__btnPlayPause {
 			position: absolute; top: 0; left: 0;
