Captions and Scenes Added

--- a/app/assets/lib/c6ui/controls/controls.css
+++ b/app/assets/lib/c6ui/controls/controls.css
@@ -101,10 +101,45 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 				.controls__slider-buffer {
 					position: absolute; height: 4px; width: 10%; left: 50%; background: #2a2d31; z-index: 2;
 				}
+
+				/* specific for branching video */
+				.controls__slider-past {
+					position: absolute; height: 4px; width: 46%; background: #0c2f5f; z-index: 3;
+				}
+
 			.controls__playhead {
 				height: 12px; width: 12px; position: absolute; margin: -4px 0 0 -6px; left: 50%;
 				background: #a4a4a4; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); border-radius: 6px; cursor: pointer; z-index: 10;
 			}
+
+			/* specific for branching video */
+			.controls__btnScene {
+				position: absolute;	margin: -2px 0 0 -6px; height: 8px; width: 12px; z-index: 9; border: 0; cursor: pointer;
+				border-radius: 2px; left: 0; background: url(img/btn_scene.png) no-repeat center center #a4a4a4;
+			}
+				@media screen and (max-width: 760px) {
+					.controls__btnScene {
+						height: 6px; background-size: 50%;margin: -1px 0 0 -3px;
+					}
+				}
+
+			/* specific for branching video */
+			.controls__caption-bottom {
+				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
+				position: absolute; text-transform: uppercase; letter-spacing: 0.2em; margin: 0.9em 0 0 0;
+			}
+			.controls__caption-top {
+				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
+				position: absolute; text-transform: uppercase; letter-spacing: 0.2em; margin: -1.9em 0 0 0;
+			}
+			@media screen and (max-width: 760px) {
+					.controls__caption-bottom {
+						display: none;
+					}
+					.controls__caption-top {
+						display: none;
+					}
+				}
 
 		.volume__btn {
 			position: absolute; right: 0; top: 0;
