--- a/app/assets/lib/c6ui/controls/controls.css
+++ b/app/assets/lib/c6ui/controls/controls.css
@@ -1,24 +1,26 @@
-body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; color:#545454; line-height: 1.5;
-        background:#efefef; margin:0;} /* from c6-main */
-.ir {
-    background-color: transparent;
-    border: 0; width:0; height:0;
-    overflow: hidden;
-    display: block; float:left;
-} /* from c6-main */
+/*  ==========================================================================
+    from c6-main.css (remove after testing)
+    ========================================================================== */
+	body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; color:#545454; line-height: 1.5;
+	        background:#efefef; margin:0;}
+	.ir {
+	    background-color: transparent;
+	    border: 0; width:0; height:0;
+	    overflow: hidden;
+	    display: block; float:left;
+	}
 
-.controls__group {
-		width: 90%; height: 40px;
-		-moz-transition:height 0.5s; -webkit-transition:height 0.5s; -o-transition:height 0.5s; transition:height 0.5s;
+/*  ==========================================================================
+    default styles
+    ========================================================================== */
+	.controls__group {
+		height: 40px;
 	}
-	@media screen and (max-width: 760px) {
-		.controls__group {
-			height: 20px;
-		}
-	}
+
+	/* ---- play/pause styles ---- */
 		.controls__btnPlayPause {
-			position: absolute; left: 0; top: 0;
-			height: 100%; width: 5%; min-width: 36px; max-width: 95px;
+			position: absolute; left: 22px; top: 0;
+			height: 100%; width: 58px; 
 			background: #1c1d1f; border-radius: 3px;
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 			-moz-transition:background 1s; -webkit-transition:background 1s; -o-transition:background 1s; transition:background 1s;
@@ -27,53 +29,30 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 
 			.controls__btnPlay-icon {
 				background: url(img/icon_play.svg) no-repeat center center; background-size: 18%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.controls__btnPlay-icon:hover { opacity: 1; }
 
 			.controls__btnPause-icon {
 				background: url(img/icon_pause.svg) no-repeat center center; background-size: 20%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.controls__btnPause-icon:hover { opacity: 1; }
 
+	/* ---- seek styles ---- */
 		.controls__seek {
-			height: 100%; width: 88%; margin: 0 auto;
+			height: 100%; margin: 0 auto; margin: 0 90px;
 			background: #1c1d1f; border: 0; border-radius: 3px;
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 			-moz-transition:width 0.5s; -webkit-transition:width 0.5s; -o-transition:width 0.5s; transition:width 0.5s;
 		}
-		@media screen and (min-width: 2352px) {
-			.controls__seek {
-				width: 90%;
-			}
-		}
-		@media screen and (max-width: 680px) {
-			.controls__seek {
-				width: 84%;
-			}
-		}
-		@media screen and (max-width: 504px) {
-			.controls__seek {
-				width: 80%;
-			}
-		}
-		@media screen and (max-width: 471px) {
-			.controls__seek {
-				width: 76%;
-			}
-		}
-		@media screen and (max-width: 379px) {
-			.controls__seek {
-				width: 70%;
-			}
-		}
-		
 			.controls__btnReturn-icon {
 				background: url(img/icon_return.svg) no-repeat center center; background-size: 34%;
-				display: block; height: 100%; width: 5.18%; opacity: 0.3; border: 0; cursor: pointer; float: left;
+				display: block; height: 100%; width: 58px;
+				opacity: 0.3; border: 0; padding: 0; cursor: pointer; 
+				float: left;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.controls__btnReturn-icon:hover {
@@ -82,7 +61,8 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 
 			.controls__btnFullscreen-icon {
 				background: url(img/icon_fullscreen.svg) no-repeat center center; background-size: 28%;
-				display: block; height: 100%; width: 5.18%; opacity: 0.3; border: 0; cursor: pointer; 
+				display: block; height: 100%; width: 58px; 
+				opacity: 0.3; border: 0; padding: 0; cursor: pointer; 
 				float: right; 
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
@@ -91,8 +71,8 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 				}
 
 			.controls__slider {
-				position: relative; left: 5%; top:44%;
-				height: 4px; width: 90%; cursor: pointer;
+				position: relative; margin: 0 58px; top:44%;
+				height: 4px; cursor: pointer;
 				background: #181a1b; box-shadow: 0 1px 0 rgba(38, 40, 42, 1);
 			}
 				.controls__slider-active {
@@ -102,48 +82,15 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 					position: absolute; height: 4px; width: 10%; left: 50%; background: #2a2d31; z-index: 2;
 				}
 
-				/* specific for branching video */
-				.controls__slider-past {
-					position: absolute; height: 4px; width: 46%; background: #0c2f5f; z-index: 3;
-				}
-
 			.controls__playhead {
 				height: 12px; width: 12px; position: absolute; margin: -4px 0 0 -6px; left: 50%;
 				background: #a4a4a4; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); border-radius: 6px; cursor: pointer; z-index: 10;
 			}
 
-			/* specific for branching video */
-			.controls__btnScene {
-				position: absolute;	margin: -2px 0 0 -6px; height: 8px; width: 12px; z-index: 9; border: 0; cursor: pointer;
-				border-radius: 2px; left: 0; background: url(img/btn_scene.png) no-repeat center center #a4a4a4;
-			}
-				@media screen and (max-width: 760px) {
-					.controls__btnScene {
-						height: 6px; background-size: 50%;margin: -1px 0 0 -3px;
-					}
-				}
-
-			/* specific for branching video */
-			.controls__caption-bottom {
-				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
-				position: absolute; text-transform: uppercase; letter-spacing: 0.2em; margin: 0.9em 0 0 0;
-			}
-			.controls__caption-top {
-				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
-				position: absolute; text-transform: uppercase; letter-spacing: 0.2em; margin: -1.9em 0 0 0;
-			}
-			@media screen and (max-width: 760px) {
-					.controls__caption-bottom {
-						display: none;
-					}
-					.controls__caption-top {
-						display: none;
-					}
-				}
-
+	/* ---- volume styles ---- */
 		.volume__btn {
-			position: absolute; right: 0; top: 0;
-			height: 100%; width: 5%; min-width: 36px; max-width: 95px;
+			position: absolute; right: 22px; top: 0;
+			height: 100%; width: 58px;
 			background: #1c1d1f; border-radius: 3px;
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 			-moz-transition:background 1s; -webkit-transition:background 1s; -o-transition:background 1s; transition:background 1s;
@@ -152,28 +99,28 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 
 			.volume__btnHigh-icon {
 				background: url(img/volume_high.svg) no-repeat center center; background-size: 36%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.volume__btnHigh-icon:hover { opacity: 1; }
 
 			.volume__btnMed-icon {
 				background: url(img/volume_med.svg) no-repeat center center; background-size: 36%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.volume__btnMed-icon:hover { opacity: 1; }
+				.volume__btnMed-icon:hover { opacity: 1; } 
 
 			.volume__btnLow-icon {
 				background: url(img/volume_low.svg) no-repeat center center; background-size: 36%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.volume__btnLow-icon:hover { opacity: 1; }
 
 			.volume__btnMute-icon {
 				background: url(img/volume_mute.svg) no-repeat center center; background-size: 36%;
-				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer;
+				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
 				.volume__btnMute-icon:hover { opacity: 1; }
@@ -202,4 +149,34 @@ body {font-size: 1em; font-family: "open-sans", Arial, Helvetica, sans-serif; co
 			.volume__playhead {
 				height: 12px; width: 12px; position: absolute; margin: 0 0 -6px -4px; bottom: 50%;
 				background: #a4a4a4; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); border-radius: 6px; cursor: pointer; z-index: 10;
+			}
+
+/*  ==========================================================================
+    video-type specific styles
+    ========================================================================== */
+
+    /* branching videos */
+		.controls__slider-past {
+			position: absolute; height: 4px; width: 46%; background: #0c2f5f; z-index: 3;
+		}
+
+		.controls__scene {
+			position: absolute; top: -17px; height: 40px; 
+			margin: 2px 0 0 0; text-align: center; z-index: 9;
+		}
+
+			.controls__scene-btn {
+				height: 8px; width: 12px; 
+				border: 0; border-radius: 2px; padding: 0;
+				background: url(img/btn_scene.png) no-repeat center center #a4a4a4;
+			}
+
+    		.controls__caption-bottom {
+				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
+				text-transform: uppercase; letter-spacing: 0.2em; margin: -1px 0 0 0;	
+			}
+
+			.controls__caption-top {
+				font-family: "open-sans", Arial, Helvetica, sans-serif; font-size: 0.5em; color: #a4a4a4;
+				text-transform: uppercase; letter-spacing: 0.2em; margin: -24px 0 0 0;
 			}
