--- a/src/controls/controls.css
+++ b/src/controls/controls.css
@@ -176,9 +176,9 @@
 		}
 
 			.controls__scene-btn {
-				height: 8px; width: 12px; position: inherit; cursor: pointer;
-				border: 0; border-radius: 2px; padding: 0; margin: 16px 46%;
-				background: url(img/btn_scene.png) no-repeat center center #a4a4a4;
+				height: 20px; width: 20px; position: inherit; cursor: pointer;
+				margin: 10px 40%;
+				background: url(img/btn_scene.png) no-repeat center center; padding: 0; border: 0;
 			}
 
     		.controls__caption-bottom {
