--- a/src/controls/controls.css
+++ b/src/controls/controls.css
@@ -15,7 +15,6 @@
     ========================================================================== */
 	.controls__group {
 		height: 40px;
-
 		-webkit-touch-callout: none;
 		-webkit-user-select: none;
 		-khtml-user-select: none;
@@ -32,21 +31,18 @@
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 			-moz-transition:background 1s; -webkit-transition:background 1s; -o-transition:background 1s; transition:background 1s;
 		}
-		.controls__btnPlayPause:hover {background: #313437;}
-
+		
 			.controls__btnPlay-icon {
 				background: url(img/icon_play.svg) no-repeat center center; background-size: 18%;
 				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.controls__btnPlay-icon:hover { opacity: 1; }
 
 			.controls__btnPause-icon {
 				background: url(img/icon_pause.svg) no-repeat center center; background-size: 20%;
 				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.controls__btnPause-icon:hover { opacity: 1; }
 
 	/* ---- seek styles ---- */
 		.controls__seek {
@@ -62,16 +58,13 @@
 				float: left;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.controls__btnReturn-icon:hover {
-					opacity: 1;
-				}
+
 			.controls__btnReturn-disabled {
 				background: url(img/icon_return.svg) no-repeat center center; background-size: 35%;
 				display: block; height: 100%; width: 58px;
 				opacity: 0.1; border: 0; padding: 0; cursor: pointer; 
 				float: left;
 			}	
-
 
 			.controls__btnFullscreen-icon {
 				background: url(img/icon_fullscreen.svg) no-repeat center center; background-size: 28%;
@@ -80,9 +73,6 @@
 				float: right; 
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.controls__btnFullscreen-icon:hover {
-					opacity: 1;
-				}
 
 			.controls__slider {
 				position: relative; margin: 0 22px; top: 10px;
@@ -112,14 +102,12 @@
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 			-moz-transition:background 1s; -webkit-transition:background 1s; -o-transition:background 1s; transition:background 1s;
 		}
-			.volume__btn:hover {background: #313437;}
 
 			.volume__btnVolume-icon {
 				background: url(img/icon_volume.svg) no-repeat center center; background-size: 36%;
 				display: block; height: 100%; width: 100%; opacity: 0.3; border: 0; cursor: pointer; padding: 0; position: absolute; top: 0;
 				-moz-transition:opacity 1s; -webkit-transition:opacity 1s; -o-transition:opacity 1s; transition:opacity 1s;
 			}
-				.volume__btnVolume-icon:hover { opacity: 1; }
 
 				.volume__btnVolume-high {
 					background: url(img/icon_volume-high.svg) no-repeat center center; background-size: 36%;
@@ -201,6 +189,12 @@
 				-moz-transition:opacity 0.2s; -webkit-transition:opacity 0.2s; -o-transition:opacity 0.2s; transition:opacity 0.2s;
 			}
 				@media screen and (max-width: 620px) {
+					.controls__caption-top, .controls__caption-bottom {
+						opacity: 0;
+					}
+				}
+
+				@media screen and (max-device-width: 1024px) {
 					.controls__caption-top, .controls__caption-bottom {
 						opacity: 0;
 					}
