--- a/src/style/css/c6__exp.css
+++ b/src/style/css/c6__exp.css
@@ -231,7 +231,7 @@
         .c6-ui__create {
             background: url(../img/c6-sprite--alpha.png) 94% 100% no-repeat; background-size:265px 265px;
         }
-            @media screen and (max-width:699px), (max-device-width : 699px) and (orientation: landscape) {
+            @media screen and (max-width:699px) {
                 .c6-ui__play, .c6-ui__create {
                     width:4em; height:4.5em; margin:-2.25em 0 0 -2em; 
                     background-size:133px 133px;
